tests/machine/x/hs/list_nested_assign.error

/workspace/mochi/tests/machine/x/hs/list_nested_assign.hs:47:18: error:
    Variable not in scope: fromMaybe :: [a2] -> Maybe [a] -> [a]
   |
47 |    in [MGroup k (fromMaybe [] (Map.lookup k m)) | k <- order]
   |                  ^^^^^^^^^
